--- a/index.html
+++ b/index.html
@@ -1,44 +1,209 @@
 <!doctype html>
 <html lang="fa" dir="rtl">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-  <meta name="theme-color" content="#111111">
-  <title>TAPWA — TA Logger (PWA)</title>
-
-  <!-- PWA -->
-  <link rel="manifest" href="./manifest.json">
-  <link rel="icon" href="./icon-192.png" sizes="192x192">
-  <link rel="apple-touch-icon" href="./icon-192.png">
-
-  <!-- Styles -->
-  <link rel="stylesheet" href="./styles.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>TA PWA</title>
+  <link rel="manifest" href="./manifest.webmanifest" type="application/manifest+json" />
+  <meta name="theme-color" content="#0ea5e9" />
+  <link rel="icon" sizes="192x192" href="./icon-192.png" />
+  <link rel="icon" sizes="512x512" href="./icon-512.png" />
+  <link rel="apple-touch-icon" href="./icon-192.png" />
+  <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
-  <header class="app-header">
-    <h1>ربات ثبت تجربه‌های TA (نسخه PWA آفلاین)</h1>
-    <div class="header-actions">
-      <button id="btn-export" class="ghost">خروجی CSV</button>
-      <button id="btn-clear" class="ghost danger">پاک‌کردن داده‌ها</button>
-    </div>
+  <header class="appbar">
+    <h1>دفترچهٔ TA (آفلاین)</h1>
+    <button id="btn-clear" class="ghost">پاک‌سازی داده‌ها</button>
   </header>
 
-  <main id="stage" class="stage" aria-live="polite"></main>
+  <main id="app">
 
-  <footer class="app-footer">
-    <div class="footer-actions">
-      <button id="btn-back" class="secondary">⬅️ بازگشت</button>
-      <button id="btn-next" class="primary">ادامه ➡️</button>
-      <button id="btn-reset" class="ghost">شروع از اول 🔄</button>
-    </div>
-    <small class="hint">آفلاین کار می‌کند — افزودن به صفحهٔ اصلی را از منوی مرورگر بزن.</small>
+    <!-- گام 0: معرفی کوتاه -->
+    <section class="screen active" id="screen-intro">
+      <p>این ابزار کمک می‌کند یک موقعیت را با چارچوب TA ثبت و مرور کنی. داده‌ها روی همین دستگاه ذخیره می‌شوند.</p>
+      <div class="fields">
+        <label>نام شما
+          <input id="your_name" placeholder="مثلاً: حسین" />
+        </label>
+        <label>نام طرف مقابل
+          <input id="other_name" placeholder="مثلاً: علی" />
+        </label>
+        <label>خلاصهٔ موقعیت (۱–۳ جمله)
+          <textarea id="summary" rows="3" placeholder="کوتاه بنویس..."></textarea>
+        </label>
+      </div>
+      <div class="nav">
+        <button id="next-0" class="primary">ادامه</button>
+      </div>
+    </section>
+
+    <!-- گام 1: نقش شما (+ زیرنقش فوری) -->
+    <section class="screen" id="screen-your-role">
+      <h2>نقش خودت را انتخاب کن</h2>
+      <p class="help">🎭
+        کودک 👶 (خودانگیختگی/احساس)، بالغ 🧠 (واقع‌بین/حل‌مسئله)، والد 👨‍🏫 (قواعد/حمایت یا انتقاد)
+      </p>
+
+      <fieldset id="your-role-group" class="chips">
+        <label><input type="radio" name="your-role" value="کودک" />کودک</label>
+        <label><input type="radio" name="your-role" value="بالغ" />بالغ</label>
+        <label><input type="radio" name="your-role" value="والد" />والد</label>
+      </fieldset>
+
+      <div id="your-subroles" class="subroles hidden"></div>
+
+      <div class="nav">
+        <button data-back="intro" class="ghost">بازگشت</button>
+        <button id="next-your-role" class="primary">ادامه</button>
+      </div>
+    </section>
+
+    <!-- گام 2: نقش طرف مقابل (+ زیرنقش فوری) -->
+    <section class="screen" id="screen-other-role">
+      <h2>نقش طرف مقابل را انتخاب کن</h2>
+      <p class="help">👤 مشابه بالا؛ در صورت «کودک/والد» زیرنقش باز می‌شود.</p>
+
+      <fieldset id="other-role-group" class="chips">
+        <label><input type="radio" name="other-role" value="کودک" />کودک</label>
+        <label><input type="radio" name="other-role" value="بالغ" />بالغ</label>
+        <label><input type="radio" name="other-role" value="والد" />والد</label>
+      </fieldset>
+
+      <div id="other-subroles" class="subroles hidden"></div>
+
+      <div class="nav">
+        <button data-back="your-role" class="ghost">بازگشت</button>
+        <button id="next-other-role" class="primary">ادامه</button>
+      </div>
+    </section>
+
+    <!-- گام 3: احساسات (چندانتخابی) -->
+    <section class="screen" id="screen-emotions">
+      <h2>احساس(ها) در پایان موقعیت</h2>
+      <p class="help">می‌توانی چند مورد انتخاب کنی، یا تایپ آزاد پایین.</p>
+
+      <div id="emotion-chips" class="chips multi"></div>
+
+      <div class="fields">
+        <input id="emotion-free" placeholder="احساس دیگر... (Enter برای افزودن)" />
+      </div>
+
+      <div class="nav">
+        <button data-back="other-role" class="ghost">بازگشت</button>
+        <button id="next-emotions" class="primary">ادامه</button>
+      </div>
+    </section>
+
+    <!-- گام 4: نیازهای تو (چندانتخابی) -->
+    <section class="screen" id="screen-your-needs">
+      <h2>نیازهای تو در این موقعیت</h2>
+      <p class="help" id="needs-help"></p>
+      <div id="your-needs-list" class="chips multi"></div>
+      <div class="nav">
+        <button data-back="emotions" class="ghost">بازگشت</button>
+        <button id="next-your-needs" class="primary">ادامه</button>
+      </div>
+    </section>
+
+    <!-- گام 5: ویزارد جزییات نیازهای تو -->
+    <section class="screen" id="screen-your-need-detail">
+      <h2 id="detail-title"></h2>
+      <div id="detail-question" class="q"></div>
+      <div id="detail-help" class="help"></div>
+      <div id="detail-options" class="chips"></div>
+
+      <div class="nav">
+        <button id="detail-back" class="ghost">یک مرحله قبل</button>
+        <button id="detail-next" class="primary">ادامه</button>
+      </div>
+    </section>
+
+    <!-- گام 6: نیازهای طرف مقابل -->
+    <section class="screen" id="screen-other-needs">
+      <h2>به‌نظرت نیازهای طرف مقابل چه بود؟</h2>
+      <div id="other-needs-list" class="chips multi"></div>
+      <div class="nav">
+        <button data-back="your-need-detail" class="ghost">بازگشت</button>
+        <button id="next-other-needs" class="primary">ادامه</button>
+      </div>
+    </section>
+
+    <!-- گام 7: ویزارد جزییات نیازهای طرف مقابل -->
+    <section class="screen" id="screen-other-need-detail">
+      <h2 id="detail-title-other"></h2>
+      <div id="detail-question-other" class="q"></div>
+      <div id="detail-help-other" class="help"></div>
+      <div id="detail-options-other" class="chips"></div>
+
+      <div class="nav">
+        <button id="detail-back-other" class="ghost">یک مرحله قبل</button>
+        <button id="detail-next-other" class="primary">ادامه</button>
+      </div>
+    </section>
+
+    <!-- گام 8: بازی‌ها -->
+    <section class="screen" id="screen-games">
+      <h2>آیا این موقعیت «بوی بازی» می‌داد؟</h2>
+      <p class="help">
+        بازی یعنی الگوی تکراری که ظاهراً منطقی‌ست ولی معمولاً با سوئیچ نقش‌ها و احساس بد تمام می‌شود.
+      </p>
+      <div id="game-yesno" class="chips">
+        <label><input type="radio" name="game-flag" value="بله" />بله</label>
+        <label><input type="radio" name="game-flag" value="خیر" />خیر</label>
+      </div>
+
+      <div id="game-select" class="hidden">
+        <h3>اگر بله: نام بازی‌ها</h3>
+        <div id="game-chips" class="chips multi"></div>
+        <div id="switch-guide" class="note"></div>
+        <label>لحظهٔ سوئیچ (۱–۲ جمله)
+          <textarea id="game-switch-note" rows="2"></textarea>
+        </label>
+      </div>
+
+      <div class="nav">
+        <button data-back="other-need-detail" class="ghost">بازگشت</button>
+        <button id="next-games" class="primary">ادامه</button>
+      </div>
+    </section>
+
+    <!-- گام 9: خلاصه + ذخیره/ارسال -->
+    <section class="screen" id="screen-summary">
+      <h2>خلاصهٔ رکورد</h2>
+      <pre id="summary-text" class="summary"></pre>
+
+      <div class="actions">
+        <button id="btn-save" class="primary">ذخیره در دستگاه</button>
+        <button id="btn-share" class="secondary">ارسال/کپی</button>
+        <button id="btn-view" class="ghost">مشاهدهٔ ذخیره‌ها</button>
+      </div>
+
+      <div class="nav">
+        <button data-back="games" class="ghost">بازگشت</button>
+        <button id="btn-new" class="primary">شروع رکورد جدید</button>
+      </div>
+    </section>
+
+    <!-- لیست ذخیره‌ها -->
+    <section class="screen" id="screen-records">
+      <h2>ذخیره‌های من (روی این دستگاه)</h2>
+      <div id="records-list" class="list"></div>
+      <div class="actions">
+        <button id="btn-export-json" class="secondary">دانلود JSON</button>
+        <button id="btn-export-csv" class="secondary">دانلود CSV</button>
+      </div>
+      <div class="nav">
+        <button data-back="summary" class="primary">بازگشت به خلاصه</button>
+      </div>
+    </section>
+
+  </main>
+
+  <footer class="foot">
+    <small>آفلاین کار می‌کند — GitHub Pages</small>
   </footer>
 
   <script src="./app.js"></script>
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('./service-worker.js', { scope: './' });
-    }
-  </script>
 </body>
 </html>
