--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
-  <meta name="theme-color" content="#0ea5e9" />
+  <!-- تم همیشه روشن -->
+  <meta name="theme-color" content="#ffffff" />
   <title>TAJ — ثبت تجربه‌های TA (PWA)</title>
   <link rel="manifest" href="./manifest.webmanifest">
   <link rel="icon" href="./icon.svg" type="image/svg+xml">
